frontend/src/Components/LeagueTable/LeagueTable.module.scss
@use '../../variables';
@import 'include-media/dist/_include-media.scss';

$breakpoints: variables.$resolution-breakpoints;



.table {
    border-collapse: collapse;
    margin: 0;
    padding: 0;

    color: variables.$text-colour;
    background-color: white;

    // font (inmporting mixin from variables)
    @include variables.Nanum-Gothic;
    font-size: 95%;
    // font-size: 1rem;

    // @include media("<=phone") {
    //     width: 100%;
    // }


    thead {
        background-color: variables.$background-colour;
        font-size: 85%;
        // font-size: 0.7rem;

    }

    tbody tr {

        td {
            // align text
            text-align: center;
            white-space: nowrap;
            // table-layout:fixed;
            // line-height: 1rem;

            // text padding based on screen width
            @include media(">phone") {
                padding: 0.75rem 1rem;

                // max&min width for Spiele S U N D Punkte
                &:nth-child(6),
                &:nth-child(7),
                &:nth-child(8),
                &:nth-child(9),
                &:nth-child(12) {
                    min-width: 1rem;
                    max-width: 1rem;
                }

                // max&min width for Tore
                &:nth-child(10) {
                    min-width: 2rem;
                    max-width: 2rem;
                }

                // highlighted columns
                &:nth-child(2),
                &:nth-child(6),
                &:nth-child(12) {
                    color: black;
                }


                // &:nth-child(6),
                &:nth-child(11),
                &:nth-child(12) {
                    text-align: right;
                }

                &:nth-child(11) {
                    // width: 1.5rem;
                    max-width: 1.5rem;
                    min-width: 1.5rem;
                    // text-align: right;
                }
            }

            @include media("<=phone") {
                padding: 0.75rem 0.3rem;
                font-size: 85%;
                // font-size: 0.8rem;


                // max&min width for Sp S U N D
                &:nth-child(6),
                &:nth-child(7),
                &:nth-child(8),
                &:nth-child(9) {
                    min-width: 1rem;
                    max-width: 1rem;
                }

                // max&min width for Pkt
                &:nth-child(11) {
                    min-width: 1.2rem;
                    max-width: 1.2rem;
                }

                // max&min width for Tore
                &:nth-child(10) {
                    min-width: 2rem;
                    max-width: 2rem;
                }

                // highlighted columns
                &:nth-child(2),
                &:nth-child(6),
                &:nth-child(11) {
                    color: black;
                }

                // &:nth-child(6),
                &:nth-child(11) {
                    text-align: right;
                }
            }


            @include media(">phone") {
                &:nth-child(5) {
                    text-align: left;
                    // width: 25rem;
                    max-width: 25rem;
                    min-width: 25rem;
                }
            }

            @include media("<=phone") {
                &:nth-child(5) {
                    text-align: left;
                    width: 100%;
                    // overflow: hidden;
                }
            }


            // position column width
            &:nth-child(2) {
                padding: 0 0.25rem 0;
            }

            // arrow column width
            &:nth-child(3) {
                padding: 0;
            }



        }

        // colour placements (ucl, uel, uecl, relpo, rel)
        .colouredCell {
            width: 3px;
            padding: 0;
        }

        .colUCL,
        .colUP {
            background-color: variables.$ucl-colour;
        }

        .colUEL {
            background-color: variables.$uel-colour;
        }

        .colUECL {
            background-color: variables.$uecl-colour;
        }

        .colRELUP,
        .colRELDOWN {
            background-color: variables.$rel-colour;
        }

        .colDOWN {
            background-color: variables.$down-colour;
        }

        // arrow colours
        .colourPos svg {
            color: variables.$positive-colour;
        }

        .colourNeg svg {
            color: variables.$negative-colour;
        }

        // mind width in case no arrow is present in whole table
        .noArrow {
            min-width: 13.6px;
        }

        // team icons
        .teamIcons {
            padding: 0.5rem 0.125rem 0.2rem;
            // justify-content: center;
            // margin-top: 1rem;
            display: flex;
            justify-content: center;
            align-items: center;

            @include media(">phone") {
                height: 1.75rem;

                img {
                    // margin: 0 auto;
                    max-height: 1.5rem;
                    max-width: 1.5rem;
                }
            }

            @include media("<=phone") {
                height: 1.5rem;

                img {
                    // margin: 0 auto;
                    max-height: 1.25rem;
                    max-width: 1.25rem;
                }
            }


        }


        // goal diff colours
        .colourPos {
            color: variables.$positive-colour;
        }

        .colourNeg {
            color: variables.$negative-colour;
        }


        // slightly delayed cursor highlight
        -webkit-transition: 0.075s 0.075s;
        transition: 0.075s 0.075s;

        &:hover {
            background-color: #d1d1d1;
        }
    }
}

